# python-gallery

./: docker-compose.yml  pyproject.toml
auth-service/: alembic.ini  pyproject.toml
auth-service/alembic/: env.py
auth-service/alembic/versions/: 4cf46dd81a82_create_users_table.py  (+1 more)
infrastructure/docker/: docker-compose.yml
posts-service/: main.py  pyproject.toml
services/auth/: pyproject.toml
services/comments/: alembic.ini  main.py  pyproject.toml
services/comments/alembic/versions/: b24a9e01a7dd_add_comments_table.py
services/comments/app/: main.py
services/comments/app/api/: routes_comments.py
services/comments/app/db/: session.py
services/comments/app/dependencies/: auth.py
services/comments/app/events/: consumer.py  handlers.py
services/comments/app/models/: __init__.py  comment.py
services/comments/app/schemas/: comment.py
services/comments/app/services/: comment_service.py
services/gateway/: pyproject.toml
services/gateway/app/: main.py
services/gateway/app/core/: config.py
services/gateway/app/middleware/: auth.py
services/gateway/app/proxy/: client.py
services/gateway/app/routes/: auth_proxy.py  comments_proxy.py  posts_proxy.py
services/posts/: pyproject.toml
services/posts/alembic/: env.py
services/posts/alembic/versions/: ad64ed36bf99_create_posts_table.py
services/posts/app/: main.py
services/posts/app/api/: routes_posts.py
services/posts/app/dependencies/: auth.py
services/posts/app/models/: post.py
services/posts/app/schemas/: post.py
services/posts/app/services/: post_service.py
(+22 files in other folders)
